--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -5,6 +5,7 @@
         android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/user_list_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
