feat : recyclerview item 디자인 수정

--- a/app/src/main/res/layout/item_user_simple_list.xml
+++ b/app/src/main/res/layout/item_user_simple_list.xml
@@ -3,7 +3,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
 
@@ -20,9 +19,12 @@
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/user_image"
+            android:textSize="15sp"
+            android:textColor="@color/black"
             tools:text="김성헌"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
